[tool.poetry]
name = "tweepy-playground"
version = "0.1.0"
description = ""
license = "GPL-2.0-or-later"
authors = ["Alex Canepa <alex@canepa.me>"]
readme = "README.md"
repository = "https://github.com/alexcanepa/tweepy-playground/"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.56.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
grip = "^4.5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
